--- a/package.json
+++ b/package.json
@@ -861,7 +861,7 @@
         }
       },{
         "key": "ctrl+alt+shift+t",
-        "mac": "alt+t",
+        "mac": "ctrl+t",
         "command": "editor.action.refactor",
         "when": "editorHasCodeActionsProvider && editorTextFocus && !editorReadonly",
         "jetbrains": "Refactor this (selected expressions or statements)"
